<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

    <TextView
        android:id="@+id/pregunta"
        android:text="@string/pregunta_primera"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ffffff"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:text="@string/respuesta_si"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/positive_normal"
                android:scaleType="fitCenter"
                android:onClick="submitText"
                />




        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageButton
                android:text="@string/respuesta_mas_o_menos"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/regular_normal"
                android:scaleType="center"
                android:onClick="submitText"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/negative_normal"
                android:scaleType="centerCrop"
                android:onClick="submitText"/>


        </FrameLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/resp_izquierda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/respuesta_buena"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/resp_central"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/respuesta_regular"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/resp_derecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/respuesta_mala"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:textAllCaps="true"/>

    </LinearLayout>

</LinearLayout>
